# ZephyrCourse

./: .gitignore  README.md  config.diff  homework.sh
.github/actions/document/: action.yml
.github/actions/style/: action.yml
.github/workflow/: workflow.yml
app/: CMakeLists.txt  Doxyfile  prj.conf
app/include/: .gitkeep
app/src/: main.cpp
